[gd_scene load_steps=43 format=3 uid="uid://bh122aots0e2n"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_a0qvs"]
[ext_resource type="Texture2D" uid="uid://byprqtjat7c07" path="res://assets/backgrounds/renderedCheckered.png" id="1_lgxp6"]
[ext_resource type="Texture2D" uid="uid://br0pxmdqytd8x" path="res://assets/idle/frame0000.png" id="3_kh381"]
[ext_resource type="Texture2D" uid="uid://itwfmfaahh1g" path="res://assets/idle/frame0001.png" id="4_7npke"]
[ext_resource type="Texture2D" uid="uid://cxxrf5h48jqcb" path="res://assets/idle/frame0002.png" id="5_vc4vv"]
[ext_resource type="Texture2D" uid="uid://csxit4s8fd6r0" path="res://assets/idle/frame0003.png" id="6_bjuat"]
[ext_resource type="Texture2D" uid="uid://bsk6fy20ae1c4" path="res://assets/idle/frame0004.png" id="7_i513q"]
[ext_resource type="Texture2D" uid="uid://baul341yey6xe" path="res://assets/idle/frame0005.png" id="8_8s1av"]
[ext_resource type="Texture2D" uid="uid://cew6jfn5sljy3" path="res://assets/run/frame0001.png" id="9_6316k"]
[ext_resource type="Texture2D" uid="uid://jxr8fivmp875" path="res://assets/jump_side/frame0000.png" id="9_b4wi6"]
[ext_resource type="Texture2D" uid="uid://cmhkn18sjyvpg" path="res://assets/run/frame0000.png" id="10_c8cht"]
[ext_resource type="Texture2D" uid="uid://bk32fmfgt5thb" path="res://assets/jump_side/frame0001.png" id="10_jlbvu"]
[ext_resource type="Texture2D" uid="uid://du2nc6wvmdl85" path="res://assets/run/frame0002.png" id="10_t3byi"]
[ext_resource type="Texture2D" uid="uid://cyssv8eb3oqjh" path="res://assets/run/frame0003.png" id="11_umcsi"]
[ext_resource type="Texture2D" uid="uid://b3ftgpy8sfrqc" path="res://assets/jump_side/frame0002.png" id="11_x2qad"]
[ext_resource type="Texture2D" uid="uid://dbrj15vbw8s6q" path="res://assets/jump_side/frame0003.png" id="12_m4ofu"]
[ext_resource type="Texture2D" uid="uid://btau0np3te05a" path="res://assets/run/frame0004.png" id="12_svedg"]
[ext_resource type="Texture2D" uid="uid://d0d3mc5lopr2h" path="res://assets/run/frame0005.png" id="13_evvbf"]
[ext_resource type="Texture2D" uid="uid://gu1yv3wqqk4i" path="res://assets/jump_side/frame0004.png" id="13_yelrx"]
[ext_resource type="Texture2D" uid="uid://btht6a18ta4tb" path="res://assets/jump_side/frame0005.png" id="14_eimpd"]
[ext_resource type="Texture2D" uid="uid://befuhnwcmpwqa" path="res://assets/run/frame0006.png" id="14_mx0s5"]
[ext_resource type="Texture2D" uid="uid://da2ywmcgbeg2h" path="res://assets/origin.png" id="15_5bb28"]
[ext_resource type="Texture2D" uid="uid://bin1gq3fp3ipy" path="res://assets/white square.png" id="15_5kuqg"]
[ext_resource type="Texture2D" uid="uid://c8d441dox6pa8" path="res://assets/jump_straight/frame0000.png" id="15_6ej8u"]
[ext_resource type="Texture2D" uid="uid://cr3r21bfwil8a" path="res://assets/jump_straight/frame0001.png" id="16_53qfo"]
[ext_resource type="Texture2D" uid="uid://bh0fxmkwqqisn" path="res://assets/vertical mover.png" id="16_l10xv"]
[ext_resource type="Script" path="res://scripts/check_mouse_over.gd" id="17_2ogaw"]
[ext_resource type="Texture2D" uid="uid://cu53pfker378o" path="res://assets/jump_straight/frame0002.png" id="17_fdka0"]
[ext_resource type="Texture2D" uid="uid://crrvpj13qyxip" path="res://assets/horizontal mover.png" id="17_g8imw"]
[ext_resource type="Texture2D" uid="uid://bdf6yo3auoehm" path="res://assets/jump_straight/frame0003.png" id="18_p4iu6"]
[ext_resource type="Texture2D" uid="uid://dngbr0631h8jd" path="res://assets/jump_straight/frame0004.png" id="19_bhmvp"]
[ext_resource type="Texture2D" uid="uid://bgb407hmt5xtf" path="res://assets/jump_straight/frame0005.png" id="20_gmqmf"]
[ext_resource type="Texture2D" uid="uid://d2f5pkafshtw1" path="res://assets/drawing border.png" id="21_n10wa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2eatl"]
radius = 26.0
height = 130.0

[sub_resource type="SpriteFrames" id="SpriteFrames_06ix1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_gmqmf")
}],
"loop": false,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_eimpd")
}],
"loop": false,
"name": &"falling_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_kh381")
}, {
"duration": 1.0,
"texture": ExtResource("4_7npke")
}, {
"duration": 1.0,
"texture": ExtResource("5_vc4vv")
}, {
"duration": 1.0,
"texture": ExtResource("6_bjuat")
}, {
"duration": 1.0,
"texture": ExtResource("7_i513q")
}, {
"duration": 1.0,
"texture": ExtResource("8_8s1av")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_b4wi6")
}, {
"duration": 1.0,
"texture": ExtResource("10_jlbvu")
}, {
"duration": 1.0,
"texture": ExtResource("11_x2qad")
}, {
"duration": 1.0,
"texture": ExtResource("12_m4ofu")
}, {
"duration": 1.0,
"texture": ExtResource("13_yelrx")
}, {
"duration": 1.0,
"texture": ExtResource("14_eimpd")
}],
"loop": false,
"name": &"jump_side",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_6ej8u")
}, {
"duration": 1.0,
"texture": ExtResource("16_53qfo")
}, {
"duration": 1.0,
"texture": ExtResource("17_fdka0")
}, {
"duration": 1.0,
"texture": ExtResource("18_p4iu6")
}, {
"duration": 1.0,
"texture": ExtResource("19_bhmvp")
}, {
"duration": 1.0,
"texture": ExtResource("20_gmqmf")
}],
"loop": false,
"name": &"jump_straight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_c8cht")
}, {
"duration": 1.0,
"texture": ExtResource("9_6316k")
}, {
"duration": 1.0,
"texture": ExtResource("10_t3byi")
}, {
"duration": 1.0,
"texture": ExtResource("11_umcsi")
}, {
"duration": 1.0,
"texture": ExtResource("12_svedg")
}, {
"duration": 1.0,
"texture": ExtResource("13_evvbf")
}, {
"duration": 1.0,
"texture": ExtResource("14_mx0s5")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0g6a2"]
radius = 20.5244

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vkvp"]
size = Vector2(6, 108)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goxjs"]
size = Vector2(28, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3fxq7"]
size = Vector2(105, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ic4p8"]
size = Vector2(25, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qeki"]
size = Vector2(1210, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2odpa"]
size = Vector2(825, 536)

[node name="Node2D" type="Node2D"]

[node name="RenderedCheckered" type="Sprite2D" parent="."]
position = Vector2(1211, -62)
scale = Vector2(1.76, 1.76)
texture = ExtResource("1_lgxp6")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(561, 319)
floor_max_angle = 1.03847
script = ExtResource("1_a0qvs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_2eatl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(18, 1.00001)
scale = Vector2(0.176389, 0.176389)
sprite_frames = SubResource("SpriteFrames_06ix1")
animation = &"falling_side"

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
offset = Vector2(0, -53.315)

[node name="DrawObject" type="Node2D" parent="CharacterBody2D"]
position = Vector2(5, -122)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/DrawObject"]
texture = ExtResource("15_5bb28")

[node name="origin" type="Area2D" parent="CharacterBody2D/DrawObject"]
script = ExtResource("17_2ogaw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/DrawObject/origin"]
position = Vector2(-0.5, -1)
shape = SubResource("CircleShape2D_0g6a2")

[node name="vertical" type="Area2D" parent="CharacterBody2D/DrawObject"]
position = Vector2(0, -3)
script = ExtResource("17_2ogaw")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/DrawObject/vertical"]
position = Vector2(0, -62)
texture = ExtResource("16_l10xv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/DrawObject/vertical"]
position = Vector2(0, -52)
shape = SubResource("RectangleShape2D_1vkvp")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CharacterBody2D/DrawObject/vertical"]
position = Vector2(0, -113)
shape = SubResource("RectangleShape2D_goxjs")

[node name="horizontal" type="Area2D" parent="CharacterBody2D/DrawObject"]
script = ExtResource("17_2ogaw")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/DrawObject/horizontal"]
position = Vector2(67, 0)
texture = ExtResource("17_g8imw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/DrawObject/horizontal"]
position = Vector2(55.5, 0)
shape = SubResource("RectangleShape2D_3fxq7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CharacterBody2D/DrawObject/horizontal"]
position = Vector2(115.5, 0)
shape = SubResource("RectangleShape2D_ic4p8")

[node name="ImageRoot" type="Node2D" parent="CharacterBody2D/DrawObject"]

[node name="ground" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="ground"]
position = Vector2(565, 652)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground/StaticBody2D"]
shape = SubResource("RectangleShape2D_4qeki")

[node name="Sprite2D" type="Sprite2D" parent="ground/StaticBody2D"]
scale = Vector2(18.9062, 2)
texture = ExtResource("15_5kuqg")

[node name="StaticBody2D2" type="StaticBody2D" parent="ground"]
position = Vector2(2241, 651)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground/StaticBody2D2"]
shape = SubResource("RectangleShape2D_4qeki")

[node name="Sprite2D" type="Sprite2D" parent="ground/StaticBody2D2"]
scale = Vector2(18.9062, 2)
texture = ExtResource("15_5kuqg")

[node name="StaticBody2D4" type="StaticBody2D" parent="ground"]
position = Vector2(3529, 379)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground/StaticBody2D4"]
shape = SubResource("RectangleShape2D_4qeki")

[node name="Sprite2D" type="Sprite2D" parent="ground/StaticBody2D4"]
scale = Vector2(18.9062, 2)
texture = ExtResource("15_5kuqg")

[node name="StaticBody2D3" type="StaticBody2D" parent="ground"]
position = Vector2(2917, 498)
rotation = -1.57079
scale = Vector2(0.21706, 2.4889)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground/StaticBody2D3"]
shape = SubResource("RectangleShape2D_4qeki")

[node name="Sprite2D" type="Sprite2D" parent="ground/StaticBody2D3"]
scale = Vector2(18.9062, 2)
texture = ExtResource("15_5kuqg")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="HUD"]
offset_left = 22.0
offset_top = 8.0
offset_right = 114.0
offset_bottom = 52.0
text = "Done"

[node name="Area2D" type="Area2D" parent="HUD"]
script = ExtResource("17_2ogaw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HUD/Area2D"]
position = Vector2(564.5, 285)
shape = SubResource("RectangleShape2D_2odpa")

[node name="Sprite2D" type="Sprite2D" parent="HUD/Area2D"]
position = Vector2(564, 285)
scale = Vector2(0.243871, 0.227621)
texture = ExtResource("21_n10wa")

[node name="Button2" type="Button" parent="HUD"]
visible = false
offset_left = 16.0
offset_top = 7.0
offset_right = 196.0
offset_bottom = 55.0
text = "Release / Freeze"

[connection signal="pressed" from="HUD/Button" to="CharacterBody2D" method="draw_button_pressed"]
[connection signal="button_down" from="HUD/Button2" to="CharacterBody2D" method="release_button_pressed"]
